# class_cpp_projects

./: README.md
02_tdd/02_exercise/: index.ipynb
02_tdd/02_exercise/project/: CMakeLists.txt
02_tdd/02_exercise/project/include/: RingBuffer.h  TextWrap.h
02_tdd/02_exercise/project/src/: RingBuffer.cpp  TextWrap.cpp  main.cpp
03_stl_containers/02_exercise/: index.ipynb
03_stl_containers/02_exercise/project/: CMakeLists.txt
03_stl_containers/02_exercise/project/src/: main.cpp
04_stl_benchmark/project/: CMakeLists.txt  readme.md
04_stl_benchmark/project/benchmarks/: CMakeLists.txt
04_stl_benchmark/project/benchmarks/src/: DummyBench.cpp  ExampleBench.cpp  LargeBench.cpp  LargeBenchmark.cpp  MediumBench.cpp  MediumBenchmark.cpp  SmallBench.cpp  SmallBenchmark.cpp
04_stl_benchmark/project/include/: Large.h  Small.h
04_stl_benchmark/project/output/multimapBenchmark/: debug  release
04_stl_benchmark/project/output/unorderedMultimapBenchmarks/: debug  release
04_stl_benchmark/project/output/vectorBenchmarks/: debug_vectorBenchmarks  release_vectorBenchmarks
05_design_patterns/02_exercise/project/: CMakeLists.txt
05_design_patterns/02_exercise/project/include/factory/executor/: AcousticCpuCore.h  AcousticCudaCore.h  AnisotropicCpuCore.h  AnisotropicCudaCore.h  Core.h  CoreFactory.h  CpuCoreFactory.h  CudaCoreFactory.h  Demo.h  ElasticCpuCore.h  ElasticCudaCore.h
05_design_patterns/02_exercise/project/include/factory/gui/: ButtonGnomeWidget.h  ButtonKdeWidget.h  CheckBoxGnomeWidget.h  CheckBoxKdeWidget.h  Demo.h  GnomeWidgetFactory.h  KdeWidgetFactory.h  ListGnomeWidget.h  ListKdeWidget.h  Widget.h  WidgetFactory.h
05_design_patterns/02_exercise/project/include/observer/observers/: Acceleration.h  Displacement.h  Observable.h  Observer.h  Speed.h
05_design_patterns/02_exercise/project/src/: main.cpp
05_design_patterns/02_exercise/project/src/factory/executor/: AcousticCpuCore.cpp  AcousticCudaCore.cpp  AnisotropicCpuCore.cpp  AnisotropicCudaCore.cpp  CpuCoreFactory.cpp  CudaCoreFactory.cpp  Demo.cpp  ElasticCpuCore.cpp  ElasticCudaCore.cpp
05_design_patterns/02_exercise/project/src/factory/gui/: ButtonGnomeWidget.cpp  ButtonKdeWidget.cpp  CheckBoxGnomeWidget.cpp  CheckBoxKdeWidget.cpp  Demo.cpp  GnomeWidgetFactory.cpp  KdeWidgetFactory.cpp  ListGnomeWidget.cpp  ListKdeWidget.cpp
05_design_patterns/02_exercise/project/src/observer/observers/: Acceleration.cpp  Displacement.cpp  Observable.cpp  Speed.cpp
05_design_patterns/02_exercise/project/tests/: CMakeLists.txt
05_design_patterns/02_exercise/project/tests/src/: ObserverTest.cpp
06_fake_mock_or_stub/02_exercise/project/: CMakeLists.txt
06_fake_mock_or_stub/02_exercise/project/include/: Observer.h  ObserverImpl.h  Space.h  SpaceImpl.h  TimeImpl.h  Time_.h  Universe.h
06_fake_mock_or_stub/02_exercise/project/src/: TimeImpl.cpp  Universe.cpp  main.cpp
06_fake_mock_or_stub/02_exercise/project/tests/: CMakeLists.txt
06_fake_mock_or_stub/02_exercise/project/tests/include/: ObserverMock.h  SpaceMock.h  TimeMock.h
06_fake_mock_or_stub/02_exercise/project/tests/src/: UniverseTest.cpp
07_qt/02_exercise/project/: project.pro
09_qt_qml/project/: acceleration.cpp  acceleration.h  displacement.cpp  displacement.h  main.cpp  main.qml  project.pro  project_pl_PL.ts  speed.cpp  speed.h
(+29 files in other folders)
